implementation of in file task manager